<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY remote_base_url "https://www.uacosendai-edu.net/eschool/">]>
<resources>
    <string name="app_name">Edischool</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Edischool</string>
    <string name="nav_header_subtitle">contact@edischool.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_me">Me</string>
    <string name="title_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="long_Text">
        This This This This This This This This This This This This This This This This This This This
        This This This This This This This This This This This This This This This This This This This
        IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS
        IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS
        The The The The The The The The The The The The The The The The The The The The The The The The
        The The The The The The The The The The The The The The The The The The The The The The The The
        Last Last Last Last Last Last Last Last Last Last Last Last Last Last Last Last Last Last Last
        Last Last Last Last Last Last Last Last Last Last Last Last Last Last Last Last Last Last Last
        Fragment Fragment Fragment Fragment Fragment Fragment Fragment Fragment Fragment Fragment Fragment
        Fragment Fragment Fragment Fragment Fragment Fragment Fragment Fragment Fragment Fragment Fragment
    </string>
    <string name="title_activity_notes">NotesActivity</string>
    <string name="menu_refresh">Refresh</string>
    <string name="date">12:01:2019</string>
    <string name="title">titre</string>
    <string name="authority">com.edis.eschool.datasync.provider</string>
    <string name="account_type">edis.com</string>
    <string name="shared_preference_file">com.edis.shared_preference_file</string>
    <string name="visite">com.edis.visite</string>
    <string name="firebase_token">com.edis.firebase_token</string>
    <string name="phone_number">com.edis.phone_number</string>
    <string name="refresh_list_broadcast">com.edis.eschool.REFRESH_LIST</string>
    <string name="last_time_sync">last_time_sync</string>
    <string name="loading_message">Loading...</string>
    <string name="SYNC_STATUS_ACTION">com.edis.eschool.SYNC_STATUS_ACTION</string>
    <string name="sync_status">sync_status</string>
    <string name="sync_running">sync_running</string>
    <string name="sync_finished">sync_finished</string>

    <!-- URL -->
    <string name="remote_base_url">&remote_base_url;</string>
    <string name="update_token_url">&remote_base_url;update_token.php</string>
    <string name="login_url">&remote_base_url;login.php</string>
    <string name="sync_url">&remote_base_url;sync.php</string>
    <string name="refreshed_message">La liste a été rafraichie</string>
    <string name="authentification_failed">L\'authentification à échouer</string>
    <string name="connexion_failed">Impossible de se connecter - Vérifier votre connexion Internet</string>
    <string name="connexion_timeout">Impossible de s\'authentifier - Réessayer plutard</string>
    <string name="title_activity_manuelscolaire">ManuelscolaireActivity</string>
    <string name="connecting">Connecting</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="change_language">Langues/Languages</string>
    <string name="share_this">Partager/Share</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync data periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="pref_account_name">Account Name</string>
    <string name="about_preference">About</string>
    <string name="sync_summary_off">Only sync when manually requested</string>
    <string name="sync_summary_on">Automatically sync data</string>
    <string name="menu_notifs">Notifications</string>
    <string name="menu_news">News</string>
    <string name="menu_help"><![CDATA[Help & Feedback]]></string>
    <string name="delete_account">delete_account</string>
    <string name="night_mode">night_mode</string>

    <string name="monday">Mon</string>
    <string name="tuesday">Tues</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thurs</string>
    <string name="friday">Frid</string>
    <string name="saturday">Satur</string>
    <string name="sunday">Sun</string>
    <string name="select_snackbar">Please, select one item.</string>
    <string name="selected">Selected</string>
    <string name="firestore_user_id">firestore_user_id</string>
    <string name="about_author"># AUTHORS</string>
    <string name="about_author_name">&lt;a href=\\\"https://jpainam.github.io\\\">Jean-Paul Ainam on GitHub&lt;/a></string>
    <string name="about_contact"># Contact</string>
    <string name="edischool_app_email">edischool@gmail.com</string>
    <string name="about_acknowledgement"># Acknowledgements</string>
    <string name="about_acknowledgement_name"></string>
    <string name="menu_about">About</string>
    <string name="about_copyright">Copyright © %1$s</string>
    <string name="about_contact_name">&lt;a href=\"mailto:%1$s\">%1$s&lt;/a></string>
    <string name="about_app_version">Version 1.4.1</string>
    <string name="activity_about_title">About</string>
    <string name="dialog_ok_answer">Ok</string>

    <!-- TABLE REFERENCE -->
</resources>
