<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbarStyle="outsideInset"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dialog_padding_horizontal"
        android:layout_marginRight="@dimen/dialog_padding_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/about_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/josefin_sans_bold"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/about_app_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans"
            android:text="@string/about_app_version"
            android:textSize="15.0sp" />

        <TextView
            android:id="@+id/about_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans_bold"
            android:paddingTop="@dimen/dialog_padding_vertical"
            android:text="@string/about_author"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/about_author_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans"
            android:linksClickable="true"
            android:text="@string/about_author_name"
            android:textSize="15.0sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans"
            android:linksClickable="true"
            android:text="Sadjang Achille"
            android:textSize="15.0sp" />

        <TextView
            android:id="@+id/about_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans_bold"
            android:paddingTop="@dimen/dialog_padding_vertical"
            android:text="@string/about_contact"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/about_contact_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:linksClickable="true"
            android:fontFamily="@font/josefin_sans"
            android:text="@string/about_contact_name"
            android:textSize="15.0sp" />

        <TextView
            android:id="@+id/about_acknowledgement"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans_bold"
            android:paddingTop="@dimen/dialog_padding_vertical"
            android:text="@string/about_acknowledgement"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/about_acknowledgement_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans"
            android:text="@string/about_acknowledgement_name"
            android:textSize="15.0sp" />

        <TextView
            android:id="@+id/about_copyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans"
            android:gravity="center"
            android:text="@string/about_copyright"
            android:paddingTop="@dimen/dialog_padding_vertical" />
    </LinearLayout>
</ScrollView>