<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:iconSpaceReserved="false"
        app:title="General">

        <ListPreference
            app:iconSpaceReserved="false"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="language_list"
            app:defaultValue="FR"
            app:title="@string/change_language"
            app:useSimpleSummaryProvider="true"
            />
        <Preference android:title="@string/pref_about"
            app:key="about_preference"
            app:iconSpaceReserved="false"
            app:summary="Edischool - App"
           />
        <SwitchPreferenceCompat
            app:key="@string/night_mode"
            app:iconSpaceReserved="false"
            app:defaultValue="false"
            app:summary="Switch on to enable Night Mode"
            app:title="Enable Night Mode" />
    </PreferenceCategory>
    <PreferenceCategory app:iconSpaceReserved="false"
        app:title="Notifications">
        <SwitchPreferenceCompat
            app:key="accept_notifications"
            app:iconSpaceReserved="false"
            app:defaultValue="true"
            app:title="New message notification" />

        <SwitchPreferenceCompat
            app:dependency="accept_notifications"
            app:key="notification_vibrate"
            app:iconSpaceReserved="false"
            app:defaultValue="true"
            app:summaryOff="Vibrate on new notification"
            app:summaryOn="Vibrate on new notification"
            app:title="Vibrate" />

    </PreferenceCategory>

    <PreferenceCategory app:iconSpaceReserved="false"
        app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:iconSpaceReserved="false"
            app:defaultValue="true"
            app:summaryOff="@string/sync_summary_off"
            app:summaryOn="@string/sync_summary_on"
            app:title="@string/sync_title" />
    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="Account">
        <EditTextPreference
            app:key="account_name"
            app:iconSpaceReserved="false"
            app:title="Your Name"
            app:defaultValue="Edis Business"
            app:summary="Edis Business"
            app:useSimpleSummaryProvider="true" />
        <Preference
            app:iconSpaceReserved="false"
            app:key="delete_account"
            app:title="Delete Account" />

    </PreferenceCategory>
    <PreferenceCategory app:iconSpaceReserved="false"
        app:title="Reset">

        <Preference
            app:iconSpaceReserved="false"
            app:key="reset"
            app:summary="Reset all the application preferences"
            app:title="Reset to default" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
